--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "nodemon --exec 'tsx src/app.ts'",
+    "dev": "nodemon --exec 'tsx src/server.ts'",
     "start": "node dist/app.js",
     "build": "rm -rf dist && tsc",
     "format": "prettier --write .",
@@ -28,10 +28,12 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "http-errors": "^2.0.1",
+    "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1",
     "winston": "^3.19.0",
     "zod": "^4.1.13"
   },
@@ -50,6 +52,7 @@
     "@types/helmet": "^0.0.48",
     "@types/http-errors": "^2.0.5",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.0",
     "@types/supertest": "^6.0.3",
