--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,42 +12,18 @@
     "skipLibCheck": true,
     "baseUrl": "./src",
     "paths": {
-      "@configs/*": [
-        "./configs/*"
-      ],
-      "@controllers/*": [
-        "./controllers/*"
-      ],
-      "@interfaces/*": [
-        "./interfaces/*"
-      ],
-      "@middlewares/*": [
-        "./middlewares/*"
-      ],
-      "@models/*": [
-        "./models/*"
-      ],
-      "@repositories/*": [
-        "./repositories/*"
-      ],
-      "@routes/*": [
-        "./routes/*"
-      ],
-      "@services/*": [
-        "./services/*"
-      ],
-      "@types/*": [
-        "./types/*"
-      ],
-      "@utils/*": [
-        "./utils/*"
-      ],
-      "@enums/*": [
-        "./enums/*"
-      ]
+      "@configs/*": ["./configs/*"],
+      "@controllers/*": ["./controllers/*"],
+      "@interfaces/*": ["./interfaces/*"],
+      "@middlewares/*": ["./middlewares/*"],
+      "@models/*": ["./models/*"],
+      "@repositories/*": ["./repositories/*"],
+      "@routes/*": ["./routes/*"],
+      "@services/*": ["./services/*"],
+      "@types/*": ["./types/*"],
+      "@utils/*": ["./utils/*"],
+      "@enums/*": ["./enums/*"]
     }
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
