--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/app.ts",
   "scripts": {
     "dev": "nodemon --exec 'tsx src/server.ts'",
-    "start": "node dist/app.js",
+    "start": "node dist/server.js",
     "build": "rm -rf dist && tsc",
     "format": "prettier --write .",
     "lint": "eslint \"src/**/*.{ts,js}\" --fix",
